[project]
name = "streamlit-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "streamlit~=1.38",
  "polars~=1.7.1",
  "matplotlib~=3.9.2",
  "pandas~=2.2.2",
  "numpy~=2.1.1",
  "scipy~=1.14.1",
  "plotly~=5.24.1",
]

[tool.uv]
dev-dependencies = [
  "mypy~=1.11.2",
  "pytest~=8.3.2",
  "pandas-stubs~=2.2.2.240909",
]


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
exclude = [".venv"]
disable_error_code = ["import-untyped"]
